--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="body" class="false" style="display: none;"></div>
         <div id="footer" style="display: none;">
             <a class="link" href="" target="_blank">
+                <span class="mark">0%</span>
                 <img class="logo" src="assets/img/teams.svg" alt="">
                 Ir al Teams
             </a>
