--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horario</title>
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <main>
         <div id="header">00 Mes 0000</div>
+        <button id="schedule" class="fa fa-calendar" title="Ver horario"></button>
         <div id="body" class="true" style="display: none;">
             <div>
                 <span class="time start"></span>
@@ -29,6 +31,7 @@
             </a>
         </div>
     </main>
+    <script src="assets/js/fontawesome.min.js" crossorigin="anonymous"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/moment.min.js"></script>
     <script src="assets/js/vars.js"></script>
