--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horario</title>
     <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/jquery.modal.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <main>
         <div id="header">00 Mes 0000</div>
-        <button id="schedule" class="fa fa-calendar" title="Ver horario"></button>
+        <button id="schedule" class="fa solid fa-calendar" title="Ver horario"></button>
         <div id="body" class="true" style="display: none;">
             <div>
                 <span class="time start"></span>
@@ -31,11 +32,16 @@
             </a>
         </div>
     </main>
-    <script src="assets/js/fontawesome.min.js" crossorigin="anonymous"></script>
+    <div id="schedule-table">
+        Hola mundo
+    </div>
+    <script src="assets/js/fontawesome.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.modal.min.js"></script>
     <script src="assets/js/moment.min.js"></script>
     <script src="assets/js/vars.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/schedule.js"></script>
 </body>
 
 </html>
