--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
     <main>
+        <select id="voces" style="display: none;"></select>
+        <input type="text" id="mensaje" style="display: none;">
+        <button id="btnEscuchar" style="display: none;"></button>
         <div id="header">00 Mes 0000</div>
         <button id="schedule" class="fa solid fa-calendar" title="Ver horario"></button>
         <div id="body" class="true" style="display: none;">
@@ -33,7 +36,6 @@
         </div>
     </main>
     <div id="schedule-table">
-        Hola mundo
     </div>
     <script src="assets/js/fontawesome.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
@@ -42,6 +44,7 @@
     <script src="assets/js/vars.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/schedule.js"></script>
+    <script src="assets/js/speech.js"></script>
 </body>
 
 </html>
