--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/jquery.modal.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link id="icon" rel="shortcut icon" href="assets/img/online.png" type="image/x-icon">
 </head>
 
 <body>
     <main>
+        <span id="status" class="online"></span>
         <select id="voces" style="display: none;"></select>
         <input type="text" id="mensaje" style="display: none;">
         <button id="btnEscuchar" style="display: none;"></button>
-        <div id="header">00 Mes 0000</div>
+        <div id="header">Día, 00 Mes 0000<br>00:00:00</div>
         <button id="schedule" class="fa solid fa-calendar" title="Ver horario"></button>
         <div id="body" class="true" style="display: none;">
             <div>
