--- a/schedule.html
+++ b/schedule.html
@@ -20,9 +20,10 @@
         }
 
         main {
-            position: relative;
-            margin: auto;
-            margin-top: 20px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             max-width: 540px;
             background-color: #fff;
             box-shadow: 0 0 5px rgb(200, 200, 200);
@@ -30,6 +31,49 @@
             padding: 15px;
         }
 
+        #menu {
+            position: absolute;
+            top: 0;
+            left: 0;
+            padding: 20px;
+            font-size: large;
+            border-radius: 5px 5px 40px 5px;
+            cursor: pointer;
+            background-color: transparent;
+            border: none;
+            transition: 0.25s;
+            z-index: 4;
+        }
+        #menu.fa-times {
+            padding: 20px 22px;
+        }
+        #menu:hover {
+            background-color: rgba(0, 0, 0, .25);
+        }
+        #menu-container {
+            position: absolute;
+            z-index: 3;
+            padding: 20px;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            border-radius: 5px;
+            background-color: rgba(255, 255, 255, .25);
+            backdrop-filter: blur(10px);
+        }
+        #menu-container button {
+            display: block;
+            margin: 20px auto;
+            font-size: medium;
+            font-weight: bolder;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            background-color: #fff;
+            color: #4285f4;
+            border: 2px solid #4285f4;
+        }
         #controls {
             display: flex;
             flex-direction: row;
@@ -108,6 +152,13 @@
 
 <body>
     <main>
+        <button id="menu" class="fa fa-bars"></button>
+        <div id="menu-container">
+            <button>HORARIO</button>
+            <button>EVENTOS</button>
+            <button>ASUNTOS</button>
+            <button>ENCARGADOS</button>
+        </div>
         <div id="controls">
             <button id="prev" class="fa fa-angle-left"></button>
             <span>
@@ -444,6 +495,9 @@
         })
         $(document).on('change', '#day', function () {
             console.log('cambió algo')
+        })
+        $(document).on('click', '#menu', function () {
+            $('#menu-container').fadeToggle(250);
         })
     </script>
 </body>
