--- a/events.html
+++ b/events.html
@@ -89,9 +89,7 @@
         <table id="table-list">
             <thead>
                 <tr>
-                    <th>#</th>
-                    <th>ASUNTO</th>
-                    <th>ENCARGADO</th>
+                    <th>ASUNTO - ENCARGADO</th>
                     <th>HORA</th>
                     <th>DÍAS</th>
                     <th>ACCIÓN</th>
@@ -99,8 +97,6 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>#</td>
-                    <td>#</td>
                     <td>#</td>
                     <td>#</td>
                     <td>#</td>
@@ -113,9 +109,10 @@
     <script type="application/javascript" src="assets/js/moment.min.js"></script>
     <script type="application/javascript" src="assets/js/jquery.min.js"></script>
     <script type="application/javascript" src="assets/js/jquery.inputmask.min.js"></script>
+    <script type="application/javascript" src="assets/js/general/guid.min.js"></script>
     <script type="application/javascript" src="assets/js/databasejs.min.js"></script>
     <script type="application/javascript" src="assets/js/redirect.min.js"></script>
-    <script type="application/javascript" src="assets/js/events.js"></script>
+    <script type="application/javascript" src="assets/js/events/main.js"></script>
 </body>
 
 </html>
