--- a/backup.html
+++ b/backup.html
@@ -60,12 +60,15 @@
                         </text>
                     </span>
                 </label>
+                <div id="details">
+                    <span class="title">Elementos que serán restablecidos</span>
+                    <div id="detail-container"></div>
+                </div>
                 <div class="form-buttons">
                     <button type="submit">Restablecer</button>
                     <button type="reset">Cancelar</button>
                 </div>
             </form>
-
         </fieldset>
 
     </main>
