--- a/events.html
+++ b/events.html
@@ -96,8 +96,12 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>#</td>
+                <tr id="{event.id}">
+                    <td>
+                        {event.subject.name}
+                        <br>-<br>>
+                        {event.attendant.name}
+                    </td>
                     <td>#</td>
                     <td>#</td>
                     <td>#</td>
