--- a/events.html
+++ b/events.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="event-footer">
                         <button id="btn-edit" class="action-btn">
-                            <i class="fa fa-edit"></i>
+                            <i class="fa fa-pencil"></i>
                             Modificar
                         </button>
                         <button id="btn-delete" class="action-btn">
